--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,12 +18,12 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-      - name: Copy files to EC2
+      - name: Copy files and deploy
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
-          cd ${{ secrets.EC2_PROJECT_PATH }} &&
-          git pull &&
-          npm install &&
-          npm run build &&
-          pm2 restart portfolio || pm2 start npm --name 'real-portfolio-project' -- start
-        "
+            cd ${{ secrets.EC2_PROJECT_PATH }} &&
+            git pull &&
+            npm install &&
+            npm run build &&
+            pm2 restart portfolio || pm2 start npm --name 'portfolio' -- start
+          "
