--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,13 +2,13 @@ name: Deploy to EC2
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    timeout-minutes: 10
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -18,12 +18,27 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.EC2_SSH_KEY }}
 
-      - name: Copy files and deploy
+      - name: Wait for SSH
         run: |
-          ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
+          for i in {1..10}; do
+            if nc -z -w5 ${{ secrets.EC2_HOST }} 22; then
+              echo "SSH is ready"
+              exit 0
+            fi
+            sleep 5
+          done
+          echo "SSH connection timed out"
+          exit 1
+
+      - name: Deploy to EC2
+        run: |
+          ssh -o StrictHostKeyChecking=no \
+              -o ConnectTimeout=30 \
+              ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
             cd ${{ secrets.EC2_PROJECT_PATH }} &&
-            git pull &&
-            npm install &&
+            git fetch origin main &&
+            git reset --hard origin/main &&
+            npm ci &&
             npm run build &&
             pm2 restart portfolio || pm2 start npm --name 'portfolio' -- start
           "
