--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,8 +36,7 @@ jobs:
               -o ConnectTimeout=30 \
               ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
             cd ${{ secrets.EC2_PROJECT_PATH }} &&
-            git fetch origin main &&
-            git reset --hard origin/main &&
+            git pull &&
             npm ci &&
             npm run build &&
             pm2 restart portfolio || pm2 start npm --name 'portfolio' -- start
