--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,5 @@ jobs:
         run: |
           ssh -o StrictHostKeyChecking=no ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
             cd ${{ secrets.EC2_PROJECT_PATH }} &&
-            git pull &&
-            npm install &&
-            npm run build &&
-            pm2 restart portfolio || pm2 start npm --name 'portfolio' -- start
+            git pull
           "
